--- a/css/main.css
+++ b/css/main.css
@@ -1,69 +1,78 @@
 .container{
-    display:grid;
-    grid-gap: 20px 20px;
-    grid-template-columns: repeat(10, 150px);
-    grid-auto-flow: row;
+    display: flex;
     margin: 0 auto;
-    max-width: 980px;
+    flex-direction:  row;
+    justify-content: center;
+    flex-wrap:  wrap;
 }
-
-.meme-0{
+h1{
+    font-size: 60px;
+    color: white;
+}
+h2{
+    color:royalblue;
+    font-size: 40px;
+}
+.meme-img{
+    display:  inline-block;
+    height: 150px;
+    width: calc(100 * (1/3) - 10px - 1px);
+    max-width: 40vw;
+    max-height: 14vw;
+    margin: 14px;
     cursor: pointer;
-    grid-column: 1/ 3;
-    grid-row: 1 / 2;
-    max-width: 24vw;
 }
-.meme-1{
-    cursor: pointer;
-    grid-column: 1 / 5;
-    grid-row: 2 / 3;
-    max-width: 24vw;
-}
-.meme-2{
-    cursor: pointer;
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
-    max-width: 24vw;
-}
-
 
 .editor{
     margin: 0 auto;
     max-width: 980px;
-    display: grid;
-    grid-gap: 20px 20px;
-    grid-template-columns: repeat(10, 150px);
-    grid-template-rows: repeat(10,150px);
-    grid-auto-flow: row;
+    display: flex;
+    flex-direction:  row;
 }
 
+.canvas{
+    max-width: 85vw;
+}
 
 
 .hideContent{
     display:none;
 }
-.img-editor{
-    grid-column: 5/ 7;
-    grid-row: 1/5;
-}
+
 .img-container{
-    grid-column: 1 / 5;
-    grid-row: 2 / 6;
-    max-width: 24vw;
+    margin: 15px;
+    padding: 11px;
+}
+.img-container-btn{
+    position: relative;
+    left: 141px;
 }
 .img-editor-container{
+    margin: 17px;
+    margin-top:  58px;
+    padding-bottom: 239px;
+    grid-column: 5/ 7;
+    grid-row: 2/5;
     display: flex;
     flex-direction: column;
-    
+    align-items: center;
 }
 .btn{
     cursor: pointer;
-
+    border:none;
+    padding: 17px;
+    max-width: 554px;
 }
-.download-btn{
-    border: 2px solid #0000003d;
-    padding: 39px;
-    background-color: #80808047;
+.btn:hover{
+    background-color: salmon
+}
+.download-btn{   
+    background-color: #dddddd;
+    padding: 15px;
+    cursor: pointer
+}
+.download-btn:hover{ 
+    background-color: salmon;
 }
 
 .dropbtn {
@@ -75,6 +84,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    margin: 25px;
 }
 
 .dropdown-content {
@@ -98,7 +108,170 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+.font-options{
+    display: inline-block;
 
+}
 .dropdown:hover .dropbtn {
 
+}
+
+.btngroup {
+    font-size: 0;
+    line-height: 1;
+    white-space: nowrap;
+    display: inline;
+}
+.btngroup--btn {
+    font-size: 1rem;
+    letter-spacing: .1em;
+    text-decoration: none;
+    text-transform: uppercase;
+    background: transparent;
+    border: 2px solid #7f8c8d;
+    border-left-width: 0;
+    display: inline-block;
+    padding: .5em 1.25em;
+    outline: 0;
+}
+.btngroup--btn:first-child {
+    border-left-width: 2px;
+    border-radius: 2em 0 0 2em;
+}
+.btngroup--btn:last-child {
+    border-radius: 0 2em 2em 0;
+}
+.btngroup--btn:link {
+    color: #bdc3c7;
+}
+.btngroup--btn:visted {
+    color: #bdc3c7;
+}
+.btngroup--btn:hover {
+    background:salmon;
+    color: #fff;
+}
+.btngroup--btn:active {
+    background: #fff;
+    color: salmon;
+}
+.meme-lines{
+    display: flex;
+    flex-direction: column;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+
+.slider.round {
+ border-radius: 34px;
+}
+
+.slider.round:before {
+ border-radius: 50%;
+}
+.danger-btn{
+    position: relative;
+    left: 139px;
+    max-width: 33px;
+    bottom: 18px;
+    background-color: #e1656500;
+    padding: 1px;
+}
+.line-container{
+    display:flex;
+    flex-direction: column;
+
+}
+.footer{
+    background-color: #5a5aa585;
+    max-width: 95vw;
+    display:  flex;
+    flex-direction:  column;
+    justify-content:  center;
+    align-items:  center;
+    flex-wrap:  wrap;
+}
+.contect-me{
+    background-color: #0000009e;
+    width: 95vw;
+}
+.controls{
+    display: grid;
+    width: 186px;
+}
+.align-x{
+    width:200px;
+    display: flex;
+}
+.arrow-horizontal{
+    width:100px;
+
+}
+.form-group{
+    display: flex;
+    justify-content: center;
+    flex-direction:  column;
+    margin:  0 auto;
+    width: 245px;
+}
+
+@media (max-width: 1000px){
+    .editor {
+        flex-direction:  column;
+    }
+    .img-container{
+        max-width: 600px;
+    }
+
+}
+
+@media (max-width:550px){
+    .img-container{
+        
+    }
 }
