--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 h1{
     font-size: 60px;
     color: white;
+    text-align: center;
 }
 h2{
     color:royalblue;
@@ -18,7 +19,7 @@ h2{
     height: 150px;
     width: calc(100 * (1/3) - 10px - 1px);
     max-width: 40vw;
-    max-height: 14vw;
+    max-height: 33vw;
     margin: 14px;
     cursor: pointer;
 }
@@ -35,9 +36,7 @@ h2{
 }
 
 
-.hideContent{
-    display:none;
-}
+
 
 .img-container{
     margin: 15px;
@@ -259,6 +258,37 @@ input:checked + .slider:before {
     margin:  0 auto;
     width: 245px;
 }
+.selected-keywords{
+    display:flex;
+    flex-direction: row;
+    flex-wrap:  wrap;
+    justify-content: space-around;
+    align-items:  center;
+    background-color: #a9a9d0;
+    color: white;
+    min-height: 168px;
+}
+.search-key{
+    cursor: pointer;
+    padding: 15px;
+}
+.search-key:hover{
+    color: #2d5dc761;
+}
+.search-key.all{
+    font-size: 70px;
+}
+.filter{
+    padding: 28px;
+    display: flex;
+    justify-content: center;
+}
+.footer p{
+    text-align: center;
+}
+.hideContent{
+    display:none;
+}
 
 @media (max-width: 1000px){
     .editor {
@@ -271,7 +301,5 @@ input:checked + .slider:before {
 }
 
 @media (max-width:550px){
-    .img-container{
-        
-    }
+
 }
