--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,23 @@
+@import "hexagon.css";
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+html {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 .container{
-    display: flex;
+    padding: 60px;
+    display: grid;
     margin: 0 auto;
-    flex-direction:  row;
-    justify-content: center;
-    flex-wrap:  wrap;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 74px;
 }
 h1{
     font-size: 60px;
@@ -12,7 +26,8 @@ h1{
 }
 h2{
     color:royalblue;
-    font-size: 40px;
+    font-size: 27px;
+    text-align:  center;
 }
 .meme-img{
     display:  inline-block;
@@ -23,20 +38,19 @@ h2{
     margin: 14px;
     cursor: pointer;
 }
-
+.hex-container{
+    padding: 34px 0px;
+}
 .editor{
     margin: 0 auto;
+    margin-top: 51px;
     max-width: 980px;
     display: flex;
     flex-direction:  row;
 }
-
 .canvas{
     max-width: 85vw;
 }
-
-
-
 
 .img-container{
     margin: 15px;
@@ -50,12 +64,25 @@ h2{
     margin: 17px;
     margin-top:  58px;
     padding-bottom: 239px;
-    grid-column: 5/ 7;
-    grid-row: 2/5;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+input, textarea{
+ border: 2px solid grey;
+ z-index: 1;
+ border-radius: 22px;
+ height: 30px;
+ font-weight: bold;
+ padding-left: 5px;
+ background-color: lightgray;
+}
+
+textarea {
+    padding: 5px;
+    height: 90px;
+}
+
 .btn{
     cursor: pointer;
     border:none;
@@ -63,15 +90,15 @@ h2{
     max-width: 554px;
 }
 .btn:hover{
-    background-color: salmon
+    background-color: #a9a9d0;
 }
 .download-btn{   
     background-color: #dddddd;
     padding: 15px;
     cursor: pointer
 }
-.download-btn:hover{ 
-    background-color: salmon;
+.download-btn:hover{
+    background-color: #a9a9d0;
 }
 
 .dropbtn {
@@ -111,9 +138,6 @@ h2{
     display: inline-block;
 
 }
-.dropdown:hover .dropbtn {
-
-}
 
 .btngroup {
     font-size: 0;
@@ -147,7 +171,7 @@ h2{
     color: #bdc3c7;
 }
 .btngroup--btn:hover {
-    background:salmon;
+    background: #a9a9d0;
     color: #fff;
 }
 .btngroup--btn:active {
@@ -228,16 +252,22 @@ input:checked + .slider:before {
 }
 .footer{
     background-color: #5a5aa585;
-    max-width: 95vw;
+    width: 100vw;
     display:  flex;
     flex-direction:  column;
     justify-content:  center;
     align-items:  center;
     flex-wrap:  wrap;
 }
+.footer-text{
+    padding:30px;
+}
+.modal{
+    width:100vw;
+}
 .contect-me{
     background-color: #0000009e;
-    width: 95vw;
+    width: 100vw;
 }
 .controls{
     display: grid;
@@ -267,6 +297,7 @@ input:checked + .slider:before {
     background-color: #a9a9d0;
     color: white;
     min-height: 168px;
+    margin-top: 25px;
 }
 .search-key{
     cursor: pointer;
@@ -276,7 +307,7 @@ input:checked + .slider:before {
     color: #2d5dc761;
 }
 .search-key.all{
-    font-size: 70px;
+    font-size: 50px;
 }
 .filter{
     padding: 28px;
@@ -285,21 +316,85 @@ input:checked + .slider:before {
 }
 .footer p{
     text-align: center;
+    color: white;
+    padding: 15px;
+}
+.footer label{
+    text-align: center;
+    color: white;
 }
 .hideContent{
     display:none;
 }
-
-@media (max-width: 1000px){
+.nav-container{
+    min-height: 15px;
+    background-color: black;
+    color:white;
+}
+.navbar a.nav-title{
+    color:#a9a9d0;
+}
+.navbar a.nav-title:hover{
+    color:#a9a9d0;
+    background-color: #333;
+    cursor: context-menu;
+}
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    color: #a9a9d0;
+    font-size: 25px;
+    top: 0;
+    width: 100vw;
+    z-index: 10;
+}
+  
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 2vw;
+}
+  
+.navbar a:hover {
+    background: #a9a9d096;
+}
+.navbar a:active {
+    color: #a9a9d0;
+    background-color: #333333;
+}
+  
+.main {
+    padding: 16px;
+    margin-top: 30px;
+    height: 1500px; 
+}
+@media (max-width: 1090px){
+    .selected-keywords{
+        min-height: 100px;
+        margin-top: 25px;
+    }
+    .container{
+        grid-template-columns: repeat(2, 1fr);
+    }
     .editor {
         flex-direction:  column;
     }
     .img-container{
         max-width: 600px;
+        margin: 0 auto;
     }
 
 }
 
-@media (max-width:550px){
+@media (max-width:730px){
+    .container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
 
 }
